[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anomed-anonymizer"
description = """
A library aiding to create anonymizers (privacy preserving machine learning
models) for the AnoMed competition platform."""
readme = "README.md"
authors = [{ name = "Yannik Potdevin", email = "ypo.uzl@proton.me" }]
maintainers = [{ name = "Yannik Potdevin", email = "ypo.uzl@proton.me" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
version = "0.0.21"
dependencies = [
    "anomed-challenge",
    "anomed-utils",
    "falcon~=4.0",
    "numpy~=1.26",
    "pandas~=2.2",
    "requests~=2.32",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
]

[project.urls]
documentation = "https://anomed-anonymizer.readthedocs.io/en/latest/"
source = "https://github.com/ypotdevin/anomed_anonymizer"

[project.optional-dependencies]
dev = ["anomed-anonymizer", "ruff~=0.7"]
test = [
    "anomed-anonymizer",
    "coverage~=7.6",
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "pytest-mock~=3.14",
    "scikit-learn~=1.6",
]
tfkeras = ["tf_keras~=2.18"]

[tool.coverage.run]
branch = true
source = ["anomed_anonymizer"]
